--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly('io.netty:netty-buffer:4.1.111.Final')
+    compileOnly('io.netty:netty-all:4.1.111.Final')
 
     compileOnly 'com.velocitypowered:velocity-api:3.3.0-SNAPSHOT'
     annotationProcessor 'com.velocitypowered:velocity-api:3.3.0-SNAPSHOT'
