--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,14 +33,8 @@ jobs:
         with:
           gradle-version: wrapper
 
-      - name: Build with Gradle 8.5
+      - name: Build with Gradle
         run: gradle build
-
-      - name: Checkout frontend
-        uses: actions/checkout@v4
-        with:
-          repository: 'YggdrasilGateway/GatewayFrontend'
-          path: 'frontend'
 
       - uses: actions/upload-artifact@v4
         name: "Upload Jar"
@@ -67,4 +61,4 @@ jobs:
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
         with:
-          gradle-version: '8.5'
+          gradle-version: '8.11'
